# visification

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Engine.cpp  Engine.h  EventPoint.cpp  EventPoint.h  Graph.cpp  Graph.h  LICENSE  README.md  Robot.cpp  Robot.h  State.cpp  State.h  helper.cpp  helper.h  main.cpp
apps/Interactive/: CMakeLists.txt  Drawable.hpp  Graphics.cpp  Graphics.h  State.cpp  State.h  VisiX.cpp  VisiX.h  XVisifier.cpp  XVisifier.h  main.cpp
documents/: initial_algorithm.txt
